# balatro_mods_cn

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README_EN.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  worker.py
app/api/: admin_auth.py  github_workflow.py  main.py  publish_workflow.py  queue_workflow.py  repositories.py  schemas.py  translation_workflow.py
app/cli/: __init__.py  incremental_translation.py  main.py  translation_brief.py  translation_loop.py
config/: app.yml
docs/: balatro-cn-selfhosted-qdrant-python-sqlite-gpu-mvp.md  current-translation-pipeline.md  developer-guide.md  translation-quality-context-strategy.md  user-guide.md
migrations/: 001_init.sql  002_fts.sql  003_api_review_workflow.sql  004_mod_workflows.sql  005_job_events.sql  006_admin_settings_queue.sql
scripts/: github_no_clone_l10n_probe.py
tests/: test_api.py  test_cli.py  test_config.py  test_db_migrate.py  test_incremental_translation.py  test_llm_client.py  test_llm_translator.py  test_lua_extractor.py  test_lua_grouping.py  test_lua_patcher.py  test_lua_reflow.py  test_lua_tokens.py  test_lua_validator.py  test_mod_config.py  test_mod_terms.py  test_no_clone_l10n_probe.py  test_ollama_embeddings.py  test_publish_workflow.py  test_pull_requests.py  test_qdrant_store.py  test_rag_glossary.py  test_repository_sync.py  test_retriever.py  test_style_pack.py  test_table_writer.py  test_term_checker.py  test_tm_importer.py  test_translation_brief.py  test_translation_loop.py  test_translation_queue.py  test_vector_sync.py
(+43 files in other folders)
