[project]
name = "balatro-mods-cn"
version = "0.1.0"
description = "Self-hosted Balatro mod Chinese localization worker."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler",
    "fastapi",
    "gitpython",
    "httpx",
    "jieba>=0.42.1",
    "orjson",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml",
    "qdrant-client",
    "rich",
    "tenacity",
    "tree-sitter>=0.25.2",
    "tree-sitter-lua>=0.5.0",
    "typer",
    "uvicorn[standard]",
]

[project.optional-dependencies]
gpu = [
    "accelerate",
    "FlagEmbedding",
    "huggingface-hub",
    "sentence-transformers",
    "transformers",
]
dev = [
    "mypy",
    "pytest",
    "pytest-xdist",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
